<resources>
    <string name="app_name">AmazonApp</string>
    <string name="powered_by_rigo">Powered by rigo</string>
    <string name="product_picture">Product picture</string>
    <string name="a_toy_is_an_item_that_is_used_in_play_especially_one_designed_for_such_use_it_is_mainly_intended_for_use_by_children_though_may_also_be_marketed_to_adults_under_certain_circumstances_specifically_adult_toys_playing_with_toys_can_be_an_enjoyable_means_of_training_young_children_for_life_in_society_different_materials_like_wood_clay_paper_and_plastic_are_used_to_make_toys_many_items_are_designed_to_serve_as_toys_but_goods_produced_for_other_purposes_can_also_be_used_for_instance_a_small_child_may_fold_an_ordinary_piece_of_paper_into_an_airplane_shape_and_quot_fly_it_quot_newer_forms_of_toys_include_interactive_digital_entertainment_some_toys_are_produced_primarily_as_collectors_items_and_are_intended_for_display_only_the_origin_of_toys_is_prehistoric_dolls_representing_infants_animals_and_soldiers_as_well_as_representations_of_tools_used_by_adults_are_readily_found_at_archaeological_sites_the_origin_of_the_word_quot_toy_quot_is_unknown_but_it_is_believed_that_it_was_first_used_in_the_14th_century_toys_are_mainly_made_for_children_1_the_oldest_known_doll_toy_is_thought_to_be_4_000_years_old_2_playing_with_toys_is_considered_to_be_important_when_it_comes_to_growing_up_and_learning_about_the_world_around_us_younger_children_use_toys_to_discover_their_identity_help_their_bodies_grow_strong_learn_cause_and_effect_explore_relationships_and_practice_skills_they_will_need_as_adults_adults_on_occasion_use_toys_to_form_and_strengthen_social_bonds_teach_help_in_therapy_and_to_remember_and_reinforce_lessons_from_their_youth">A toy is an item that is used in play, especially one designed for such use. It is mainly intended for use by children, though may also be marketed to adults under certain circumstances, specifically adult toys. Playing with toys can be an enjoyable means of training young children for life in society. Different materials like wood, clay, paper, and plastic are used to make toys. Many items are designed to serve as toys, but goods produced for other purposes can also be used. For instance, a small child may fold an ordinary piece of paper into an airplane shape and \"fly it\". Newer forms of toys include interactive digital entertainment. Some toys are produced primarily as collectors\' items and are intended for display only. The origin of toys is prehistoric; dolls representing infants, animals, and soldiers, as well as representations of tools used by adults are readily found at archaeological sites. The origin of the word \"toy\" is unknown, but it is believed that it was first used in the 14th century. Toys are mainly made for children.[1] The oldest known doll toy is thought to be 4,000 years old.[2] Playing with toys is considered to be important when it comes to growing up and learning about the world around us. Younger children use toys to discover their identity, help their bodies grow strong, learn cause and effect, explore relationships, and practice skills they will need as adults. Adults on occasion use toys to form and strengthen social bonds, teach, help in therapy, and to remember and reinforce lessons from their youth.</string>
    <string name="pay_icon">pay icon</string>
    <string name="sort_by">Sort by</string>
    <string name="no_data_detected">no data detected</string>
    <string name="downloading">downloading</string>
</resources>